# coAgentServer

./: Procfile  README.md  pyproject.toml  requirements.txt
my_copilotkit_remote_endpoint/: agent.py  checkpointer.py  custom_langgraph_agent.py  main.py  server.py
my_copilotkit_remote_endpoint/handlers/: action_handler.py
my_copilotkit_remote_endpoint/services/: approval_subscriber.py
my_copilotkit_remote_endpoint/tools/: weather.py
my_copilotkit_remote_endpoint/utils/: redis_client.py  redis_utils.py
