[tool.poetry]
name = "my-copilotkit-remote-endpoint"
version = "0.1.0"
description = ""
authors = ["gadsdencode <jordan.martens@osscontact.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
copilotkit = "^0.1.27"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
redis = "^5.2.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.19.0"}
pydantic-settings = "^2.6.1"
pydantic = "^2.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
